# today

./: CMakeLists.txt  LICENSE.txt  README.md  Requirements.txt  possible improvements.txt
include/: Application.hpp  TTYFormat.hpp  Tasksheet.hpp  config.hpp  util.hpp
include/rang/: rang.hpp
src/: Application.cpp  TTYFormat.cpp  Tasksheet.cpp  config.cpp  main.cpp  util.cpp
